--- a/jmp-application/pom.xml
+++ b/jmp-application/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.epam</groupId>
-    <artifactId>jmp-cloud-service-impl</artifactId>
+    <artifactId>jmp-application</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -16,7 +16,25 @@
     <dependencies>
         <dependency>
             <groupId>com.epam</groupId>
+            <artifactId>jmp-bank-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.epam</groupId>
             <artifactId>jmp-service-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.epam</groupId>
+            <artifactId>jmp-cloud-bank-impl</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.epam</groupId>
+            <artifactId>jmp-cloud-service-impl</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
